--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <h1>Welcome to the Black Background Page</h1>
-    <p>Scroll down to see more content...</p>
-    <script src="./snow.js"></script>
+    <h1>Welcome to the Snow Effect Demo</h1>
+    <p>Scroll down to test</p>
+    <script src="./snow-effect/snow.js"></script>
 </body>
 
 </html>
